Fix contrast ratio for the green button to meet WCAG AA level.

--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ html {
 }
 .button--green {
   color: white;
-  background-color: #00cd00;
+  background-color: #028702;
 }
 .button--blue {
   color: white;
