--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,3 +12,6 @@ $main-color-text : rgb(85, 85, 85);
 
 //colors
 $primary-color : #0069d9;
+
+//Buttons
+$calc-btn-color : #028702;
