--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -21,7 +21,7 @@
     }
     &--green{
         color: white;
-        background-color: #00cd00;
+        background-color: $calc-btn-color;
     }
 
     &--blue{
